<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/layoutContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="72dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="32dp"
                    android:adjustViewBounds="true"
                    android:gravity="center_horizontal"
                    android:scaleType="fitCenter"
                    android:src="@drawable/app_icon" />



                <com.google.android.gms.common.SignInButton
                    android:id="@+id/sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="20dp"

                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:visibility="gone"
                    >

                </com.google.android.gms.common.SignInButton>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    >

                    <View
                        android:layout_width="100dp"
                        android:layout_height="1dp"
                        android:background="@color/theme_dark_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:gravity="top"
                        android:text="@string/or"
                        android:paddingLeft="@dimen/margin_10"
                        android:paddingRight="@dimen/margin_10"
                        android:textColor="@color/theme_dark_text"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="100dp"
                        android:layout_height="1dp"
                        android:background="@color/theme_dark_text" />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/button_margin"
                    android:layout_marginRight="@dimen/button_margin"
                    android:gravity="left"
                    android:hint="@string/email"
                    app:errorEnabled="true">

                    <EditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:gravity="left"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:nextFocusForward="@+id/editTextPassword"
                        android:textSize="@dimen/text_large"
                        android:background="@color/white"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/button_margin"
                    android:layout_marginRight="@dimen/button_margin"
                    android:gravity="left"
                    android:hint="@string/password"
                    app:errorEnabled="true">

                    <EditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:gravity="left"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textSize="@dimen/text_large"
                        android:background="@color/white"

                        />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textViewForgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="sans-serif"
                    android:gravity="left"
                    android:padding="12dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/theme_dark_text" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/button_margin"
                    android:layout_marginRight="@dimen/button_margin">

                    <LinearLayout
                        android:id="@+id/layoutProgress"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/button_height_normal"
                        android:layout_gravity="center"
                        android:background="@drawable/rect_corner_boarder_black"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:visibility="gone"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="8dp"
                            android:fontFamily="sans-serif"
                            android:text="@string/please_wait_no_dots"
                            android:textColor="@color/theme_dark_text"
                            android:textSize="@dimen/text_large" />

                        <ProgressBar
                            style="?android:attr/progressBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/buttonLogin"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/button_height_normal"
                        android:background="@drawable/button_white"
                        android:fontFamily="sans-serif"
                        android:gravity="center"
                        android:text="@string/login_back"
                        android:textColor="@color/white" />

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:gravity="left"
                        android:text="@string/donot_signup"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/textViewSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:fontFamily="sans-serif"
                        android:gravity="left"
                        android:padding="4dp"
                        android:text="@string/sign_up"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>


        </ScrollView>

        <FrameLayout
            android:id="@+id/layoutProgressRoot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/highlight"
            android:clickable="true"
            android:visibility="gone">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
